# insect_robot

./: README.md
insect_1_control/: CMakeLists.txt  package.xml
insect_1_control/config/: insect_rbot_control (copy).yaml  insect_rbot_control.yaml  insect_rbot_torque_control.yaml
insect_1_control/launch/: insect_1_control.launch  insect_1_torque_control.launch
insect_1_description/: CMakeLists.txt  package.xml
insect_1_description/meshes/: Empty_Link2.STL  Empty_Link44.STL  hip_v1.dae  motor.dae  motor_v1.dae  torso_v1.dae  torso_v2.dae
insect_1_description/rviz/: urdf.rviz
insect_1_description/urdf/: Untitled Document  insect.backup.dae  insect.dae  insect.urdf  insect.urdf (3rd copy).xacro  insect.urdf (4th copy).xacro  insect.urdf (another copy).xacro  insect.urdf (copy).xacro  insect.urdf.xacro  insect.urdf1.xacro  insect2.urdf.xacro
insect_1_gazebo/: CMakeLists.txt  package.xml  setup.py
insect_1_gazebo/launch/: display.launch  insect_1.launch  insect_1_gazebo.launch  insect_1_rqt.launch  insect_1_rqt.perspective  teleop.launch
insect_1_gazebo/scripts/: insect_robot_move.py  navigation.py  sensor_data_listener.py  walker (3rd copy).py  walker (another copy).py  walker (copy).py  walker.py  walker_demo (copy).py  walker_demo.py
insect_1_gazebo/src/: insect_torques_controller.py  insect_walking (copy).py  insect_walking.py  position_controller.py
insect_1_gazebo/src/insect_1_gazebo/: insect.py
insect_description/: CMakeLists.txt  frames.gv  package.xml
insect_description/insect_msgs/: package.xml  (+1 more)
insect_robot_3/: CMakeLists.txt  package.xml
(+99 files in other folders)
